force-app/main/default/objects/vlocity_cmt__CustomObjectMap__c/fields/vlocity_cmt__DestinationChildObject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DestinationChildObject__c</fullName>
    <label>Destination Child Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>