force-app/main/default/objects/vlocity_cmt__CustomObjectMap__c/fields/vlocity_cmt__DestinationParentObject__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DestinationParentObject__c</fullName>
    <label>Destination Parent Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>