force-app/main/default/objects/vlocity_cmt__CustomObjectMap__c/fields/vlocity_cmt__ParentDestinationReferenceField__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ParentDestinationReferenceField__c</fullName>
    <label>Parent Destination Reference Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>